# lit_anal

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 8c9d2a1b4f11_add_paper_collection_scope.py  a1f4d2c8b7e3_add_markdown_path_to_paper_extractions.py  b6e2f1a9c4d7_add_optional_zotero_fields.py  c53ae0f456d9_initial.py  d3e7f2b1a5c9_add_llm_name_to_analysis_runs.py  e69878dbad84_add_html_json_doctags_paths_to_paper_extractions.py  f2c1b9a7d4e8_add_images_dir_to_paper_extractions.py
app/: config.py
app/db/: models.py  session.py
app/extraction/: docling_pipeline.py
app/ingestion/: indexer.py  zotero_client.py
app/observability/: langfuse_client.py
app/synthesis/: prompts.py  schemas.py  workflow.py
app/ui/: doctags_search.py  html_search.py  main.py  paper_preview.py
app/ui/pages/: analysis.py  data_source.py  extractions.py  results.py
instructions/: PRD.md
tests/integration/: test_workflow.py
tests/unit/: test_doctags_search.py  test_extraction_pipeline.py  test_html_search.py  test_ingestion.py  test_prompt_parser.py  test_schemas.py
